test: adding unit test and cleanup things